[project]
name = "hb6502"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py65>=1.2.0",
    "pytest>=8.0",
]

[tool.ruff.lint]
select = ["I", "UP", "SIM", "B"]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.ruff]
target-version = "py310"
